<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:background="@color/white"
android:fitsSystemWindows="true"
android:layout_height="match_parent">

<include layout="@layout/layout_normal_titlebar"
    android:id="@+id/btn_close_before_live"/>

<View
    android:layout_width="match_parent"
    android:layout_height="171dp"
    android:background="@drawable/tv_live_room_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_close_before_live" >
</View>

<LinearLayout
    android:translationZ="1dp"
    android:orientation="vertical"
    android:id="@+id/ll_live_room_tip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="10dp"
    android:paddingBottom="30dp"
    android:background="@drawable/tv_live_room_tip"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/layout_title" >

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/live_auth_require"
        android:textStyle="bold"
        android:textColor="#ff131415"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_live_room_tip" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ll_bind_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        tools:ignore="MissingConstraints"
        android:paddingVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_tip">
            <TextView
                android:id="@+id/tv_bind_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="55dp"
                android:text="@string/bind_phone"
                android:textStyle="bold"
                android:textColor="#555555"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_bind_phone_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="55dp"
                android:layout_marginRight="15dp"
                android:text="@string/bind_start"
                android:textStyle="bold"
                android:textColor="@color/bind_common_bg_purple"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="@+id/tv_bind_phone"
                app:layout_constraintBottom_toBottomOf="@+id/tv_bind_phone" />
    </android.support.constraint.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_gray"
        app:layout_constraintBottom_toBottomOf="@+id/ll_bind_ic_card"
        app:layout_constraintTop_toTopOf="@+id/tv_live_tip"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/ll_auth_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        tools:ignore="MissingConstraints"
        android:paddingVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_bind_bank_card" >
            <TextView
                android:id="@+id/tv_auth_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="55dp"
                android:text="@string/auth_photo"
                android:textStyle="bold"
                android:textColor="#555555"
                android:textSize="15dp"
                />

            <TextView
                android:id="@+id/tv_auth_photo_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="55dp"
                android:layout_marginRight="15dp"
                android:text="@string/auth_start"
                android:textStyle="bold"
                android:textColor="#DB57F3"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="@+id/tv_bind_ic_card"
                app:layout_constraintBottom_toBottomOf="@+id/tv_bind_ic_card" />
    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_gray"
        app:layout_constraintBottom_toBottomOf="@+id/ll_bind_bank_card"
        app:layout_constraintTop_toTopOf="@+id/ll_bind_ic_card"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_live_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_live_tip"
        android:textColor="#131415"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/live_auth_tip"
        app:layout_constraintBottom_toBottomOf="@+id/ll_bind_ic_card" />

    <TextView
        android:id="@+id/live_auth_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:lineHeight="18dp"
        android:text="@string/live_auth_tip"
        android:textColor="#555555"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_bind_ic_card" />


</LinearLayout>

<android.support.constraint.ConstraintLayout
    android:id="@+id/layout_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="33dp"
    android:layout_marginRight="20dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_close_before_live">

    <com.tencent.liteav.audiosettingkit.CircleImageView
        android:id="@+id/img_live_room_cover"
        android:padding="1dp"
        android:background="@drawable/bg_live_room_cover"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_margin="5dp"
        android:src="@drawable/live_ic_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/item_identity_icon"
        android:layout_width="27dp"
        android:layout_height="0dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/user_svip"
        app:layout_constraintBottom_toBottomOf="@id/img_live_room_cover"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintRight_toRightOf="@id/img_live_room_cover" />


    <TextView
        android:id="@+id/tv_live_room_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"
        android:textColor="@color/live_white"
        android:textSize="@dimen/live_text_size_middle"
        android:textStyle="bold"
        android:text="@string/live_to_register_anchor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_live_room_cover"
        app:layout_constraintTop_toTopOf="@+id/img_live_room_cover" />

    <TextView
        android:id="@+id/tv_live_room_quality_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:text="@string/live_text_quality_tag"
        android:textColor="@color/live_white"
        android:textSize="@dimen/live_text_size_middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_live_room_cover"
        app:layout_constraintTop_toBottomOf="@+id/tv_live_room_name" />

</android.support.constraint.ConstraintLayout>



<Button
    android:id="@+id/btn_start_auth"
    android:layout_width="265dp"
    android:layout_height="40dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/selector_item_require_anchor_start"
    android:text="@string/live_btn_start_auth"
    android:textColor="@drawable/selector_color_require_anchor_start"
    android:textSize="@dimen/live_text_size_large"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
